# ai-ticket-agent

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
docs/: architecture.md
scripts/: run_scheduler.py  seed_db.py  simulate_tickets.py  train_model.py
src/: __init__.py  config.py  logging_config.py
src/agent/: __init__.py  agent.py  prompts.py
src/agent/providers/: __init__.py  anthropic_provider.py  base.py  factory.py  mock_provider.py  ollama_provider.py  openai_provider.py
src/api/: __init__.py  dependencies.py  main.py
src/api/routes/: agent.py  health.py  metrics.py  tickets.py
src/api/schemas/: metrics.py  ticket.py
src/automation/: __init__.py  ingestor.py  scheduler.py
src/db/: __init__.py  models.py  repositories.py  session.py
src/ml/: __init__.py  classifier.py  dataset.py
src/ml/models/: ticket_classifier.pkl
src/services/: __init__.py  ticket_service.py
tests/: conftest.py  test_agent.py  test_api_agent.py  test_api_health.py  test_api_metrics.py  test_api_tickets.py  test_classifier.py  test_ingestor.py  test_providers.py  test_repositories.py
