[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-ticket-agent"
version = "0.1.0"
description = "Backend que clasifica tickets de soporte con ML clasico y deja que un agente LLM (Anthropic, OpenAI u Ollama) decida la accion a tomar."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Julian Becerra" }]
keywords = ["ai", "ml", "fastapi", "tickets", "agents", "llm", "sklearn"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "scikit-learn>=1.5",
    "pandas>=2.2",
    "numpy>=1.26",
    "joblib>=1.4",
    "anthropic>=0.40",
    "openai>=1.55",
    "httpx>=0.27",
    "apscheduler>=3.10",
    "python-multipart>=0.0.12",
    "tenacity>=9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "ipykernel>=6.29",
    "matplotlib>=3.9",
    "seaborn>=0.13",
]

[project.scripts]
train-model = "scripts.train_model:main"
seed-db = "scripts.seed_db:main"
simulate-tickets = "scripts.simulate_tickets:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
    "integration: tests que requieren base de datos real",
    "llm: tests que llaman a un proveedor LLM real",
]
